fixing yaml (maybe)

--- a/pixi.toml
+++ b/pixi.toml
@@ -2,7 +2,7 @@
 authors = ["Bruno M L <brunoml.eca@gmail.com>"]
 channels = ["conda-forge"]
 name = "best-of-casadi"
-platforms = ["win-64"]
+platforms = ["win-64", "linux-64"]
 version = "0.1.0"
 
 [tasks]
